src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  scroll-behavior: smooth;
}

/* Curve Navbar */
.curve-divider-navbar {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
}

.curve-divider-navbar svg {
  position: relative;
  display: block;
  width: calc(100% + 1.3px);
  height: 10px;
}

.curve-divider-navbar .shape-fill {
  fill: #1D3557;
}

/* Wavy Hero */
.wavy-divider-hero {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
  transform: rotate(180deg);
}

.wavy-divider-hero svg {
  position: relative;
  display: block;
  width: calc(100% + 1.3px);
  height: 50px;
}

.wavy-divider-hero .shape-fill {
  fill: #457B9D;
}

/* Wavy Bio */
.wavy-divider-bio {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
  transform: rotate(180deg);
}

.wavy-divider-bio svg {
  position: relative;
  display: block;
  width: calc(100% + 1.3px);
  height: 30px;
}

.wavy-divider-bio .shape-fill {
  fill: #457B9D;
}

/* Wavy Footer */
.wave-divider-footer {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
  transform: rotate(180deg);
}

.wave-divider-footer svg {
  position: relative;
  display: block;
  width: calc(100% + 1.3px);
}

.wave-divider-footer .shape-fill {
  fill: #1D3557;
}

/* Footer - LinkedIn Logo inner-fill */
.linkedin-logo {
  color: #A8DADC;
}

li:hover .linkedin-logo .inner {
  color: #E63946;
}

.linkedin-logo .outer {
  fill: #F1FAEE;
}

.linkedin-logo .inner {
  fill: currentColor;
}

.linkedin-logo .outer, .linkedin-logo .inner {
  fill-rule: evenodd;
}

h3, p, li {
  color: #F1FAEE;
}

h1, h2 {
  color: #A8DADC;
  font-weight: bold;
}

.footer ul a:hover,
.footer ul a:focus {
  background-color: #E63946;
}

